fixing some layout issues, sidebar needs fixing

--- a/styles.css
+++ b/styles.css
@@ -107,9 +107,9 @@ main > h1 {
 .sidebar {
     float: left;
     box-sizing: border-box;
-    max-width: 40vw;
+    max-width: 15%;
     padding: 0;
-    margin: 0 2vh 0 1.5vw;
+    margin: 0 1em 0 2em;
 }
 
 .sidebar ul {
@@ -118,7 +118,8 @@ main > h1 {
 }
 
 .sidebar li {
-    padding: 2vh 8vw 2vh 1.5vw;
+    padding: 2vh 0 2vh 1vw;
+    width: 100%;
     margin: 0;
 }
 
@@ -126,8 +127,8 @@ main > h1 {
 
 .carousel-section {
     min-height: 80vh;
-    width: 70vw;
-    float:inline-start;
+    width: 80%;
+    float:right;
 }
 
 .products {
